[package]
name = "rcosmos_exporter"
version = "0.6.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
prometheus = "0.13.4"
lazy_static = "1.5.0"
hyper = { version = "0.14", features = ["full"] }
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
rand = "0.9.0"
cosmrs = "0.21.1"
base64 = "0.22.1"
urlencoding = "2.1.3"
futures = "0.3.31"
