[package]
name = "rcosmos-exporter"
version = "2.9.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
prometheus = "0.13.4"
lazy_static = "1.5.0"
hyper = { version = "0.14", features = ["full"] }
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
rand = "0.9.0"
base64 = "0.22.1"
urlencoding = "2.1.3"
futures = "0.3.31"
async-trait = "0.1.88"
sha2 = "0.10.8"
bech32 = "0.11.0"
anyhow = "1.0.97"
openssl = { version = "0.10", features = ["vendored"] }
tokio-util = "0.7.15"
clickhouse = { version = "0.13.3", features = ["rustls-tls", "chrono"] }
hex = "0.4.3"

[build-dependencies]
chrono = { version = "0.4", features = ["clock"] }
